# testovoye_matrix

./: CMakeLists.txt  main.cpp
include/: matrix_multiplier.hpp
src/: matrix_multiplier.cpp
tests/: test_script.py
